# kzg-ceremony-sequencer

./: .dockerignore  .gitignore  Cargo.toml  Changelog.md  Dockerfile  Readme.md  SECURITY.md  build.rs  clippy.toml  cspell.json  fly.toml  mit-license.md  readme.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build-test-deploy.yml
crypto/: Cargo.toml  Readme.md  criterion.rs
crypto/proptest-regressions/signature/: mod.txt
crypto/src/: bak.rs  batch.rs  batch_contribution.rs  batch_transcript.rs  contribution.rs  crypto.rs  error.rs  group.rs  hex_format.rs  implementation.rs  interface.rs  json_schema.rs  lib.rs  powers.rs  transcript.rs  zcash_format.rs
crypto/src/engine/: both.rs  mod.rs
crypto/src/engine/arkworks/: endomorphism.rs  ext_field.rs  mod.rs  zcash_format.rs
crypto/src/engine/arkworks/hashing/: hash_to_curve.rs  hash_to_field.rs  mod.rs  xmd_expander.rs
crypto/src/engine/blst/: g1.rs  g2.rs  mod.rs  scalar.rs
crypto/src/signature/: identity.rs  mod.rs
crypto/src/types/: contribution.rs  error.rs  group.rs  mod.rs  powers.rs  powers_json.rs  transcript.rs  utils.rs
enum-variant/: Cargo.toml
enum-variant-derive/: Cargo.toml
enum-variant-derive/src/: lib.rs
enum-variant/src/: lib.rs
error-codes/: Cargo.toml
error-codes-derive/: Cargo.toml
error-codes-derive/src/: lib.rs
error-codes/src/: lib.rs
migrations/: 20220913140414_add_contributors.sql  20220913140414_add_finished_contributors.sql  20221010203214_add_autoinc_id.sql
src/: api.rs  constants.rs  data.rs  eth_sign.rs  io.rs  jwt.rs  keys.rs  lib.rs  lobby.rs  main.rs  oauth.rs  queue_simple.rs  receipt.rs  sessions.rs  storage.rs  test_transcript.rs  test_util.rs  util.rs
src/api/: v1.rs
src/api/v1/: auth.rs  contribute.rs  error_response.rs  errors.rs  info.rs  lobby.rs  mod.rs  ping.rs  queue.rs  slot.rs
src/data/: transcript.rs
src/io/: transcript.rs
src/jwt/: errors.rs  mod.rs
src/oauth/: ethereum.rs  github.rs  mod.rs
src/tmp/: main copy.rs  main2.rs  main_auth0_works.rs  main_jwt.rs  main_works_queue.rs  queue.rs  queue_refactor.rs  v2.rs
src/tmp/v2/: auth.rs  contribute.rs  info.rs  ping.rs  queue.rs
src/tmp/v2/auth/: errors.rs  tokens.rs
tests/: integration_test.rs  mock_auth_service.rs
tests/common/: actions.rs  harness.rs  mock_auth_service.rs  mod.rs  participants.rs
