[package]
name = "kzg_ceremony_sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = ["serde", "v4"] }
axum = { version = "0.5.15", features = ["headers"] }
axum-extra = { version = "0.3.7", features = ["erased-json"] }
chrono = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.35"
serde_json = "1.0"
oauth2 = "4.1"
headers = "0.3"
http = "0.2"
async-session = "3.0.0"

# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }

hex = "*"
small-powers-of-tau = { git = "https://github.com/crate-crypto/small-powers-of-tau" }

jsonwebtoken = { version = "8.0", features = ["use_pem"] }
once_cell = "1.8"

indexmap = "1.9.1"
