[package]
name = "kzg-ceremony-sequencer"
version = "0.1.0"
description = "Implementation of the Ethereum KZG Ceremony specification sequencer"
authors = [
    "Remco Bloemen <remco@wicked.ventures>",
    "Kevaundray Wedderburn <kev@the.dev>",
    "Marcin Kostrzewa <marcin@reilabs.io>",
    "Grzegorz Świrski <greg@reilabs.io>",
]
homepage = "https://github.com/ethereum/kzg-ceremony-sequencer"
repository = "https://github.com/ethereum/kzg-ceremony-sequencer"
edition = "2021"
license-file = "./mit-license.md"
keywords = ["cryptography"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = []
mimalloc = ["cli-batteries/mimalloc"]

# Dummy lib target so we can run doc tests
[lib]
path = "src/lib.rs"

[[bin]]
name = "kzg-ceremony-sequencer"
path = "src/main.rs"

[workspace]
members = [
    "crypto",
]

[dependencies]
cli-batteries = { version = "0.3.3", features = ["signals", "prometheus", "metered-allocator", "otlp"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
axum = { version = "0.5.15", features = ["headers"] }
axum-extra = { version = "0.3.7", features = ["erased-json"] }
hyper = "0.14"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7.4"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.35"
serde_json = "1.0"
oauth2 = "4.1"
headers = "0.3"
chrono = "0.4"
http = "0.2"
async-session = "3.0.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
small-powers-of-tau = { git = "https://github.com/crate-crypto/small-powers-of-tau" }
kzg-ceremony-crypto = { path = "./crypto", features = ["arkworks"] }
jsonwebtoken = { version = "8.0", features = ["use_pem"] }
once_cell = "1.8"
indexmap = "1.9.1"
clap = { version = "3.2.21", features = ["derive"] }
eyre = "0.6.8"
url = "2.3.1"
hex = "0.4.3"

# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }


[build-dependencies]
cli-batteries = "0.3.1"

[dev-dependencies]
tempfile = "3.3.0"
