[package]
name = "kzg-ceremony-sequencer"
version = "0.1.0"
description = "Implementation of the Ethereum KZG Ceremony specification sequencer"
authors = [
    "Remco Bloemen <remco@wicked.ventures>",
    "Kevaundray Wedderburn <kev@the.dev>",
    "Marcin Kostrzewa <marcin@reilabs.io>",
    "Grzegorz Świrski <greg@reilabs.io>",
]
homepage = "https://github.com/ethereum/kzg-ceremony-sequencer"
repository = "https://github.com/ethereum/kzg-ceremony-sequencer"
edition = "2021"
license-file = "./mit-license.md"
keywords = ["cryptography"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["sqlite"]
mimalloc = ["cli-batteries/mimalloc"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

# Dummy lib target so we can run doc tests
[lib]
path = "src/lib.rs"

[[bin]]
name = "kzg-ceremony-sequencer"
path = "src/main.rs"

[workspace]
members = [
    "crypto",
]

[dependencies]
async-session = "3.0.0"
axum = { version = "0.5.15", features = ["headers"] }
axum-extra = { version = "0.3.7", features = ["erased-json"] }
base64 = "0.13"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
cli-batteries = { version = "0.4.0", features = ["signals", "prometheus", "metered-allocator", "otlp"] }
ethers-core = "0.17.0"
ethers-signers = "0.17.0"
eyre = "0.6.8"
headers = "0.3"
hex = "0.4.3"
http = "0.2"
hyper = "0.14"
indexmap = "1.9.1"
k256 = "0.11.5"
kzg-ceremony-crypto = { path = "./crypto", features = ["arkworks", "blst"] }
oauth2 = "4.1"
once_cell = "1.8"
rand = "0.8"

# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
secrecy = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
small-powers-of-tau = { git = "https://github.com/crate-crypto/small-powers-of-tau" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "any", "chrono"] }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.35"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7.4"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.35"
url = "2.3.1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[build-dependencies]
cli-batteries = "0.4.0"

[dev-dependencies]
futures = "0.3"
tempfile = "3.3.0"
