[package]
version = "0.1.0"
name = "kzg-ceremony-crypto"
description = "Implementation of the ethereum kzg cermony spec cryptography"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
edition = "2021"
homepage = "https://github.com/ethereum/kzg-ceremony-sequencer"
repository = "https://github.com/ethereum/kzg-ceremony-sequencer"
keywords = ["cryptography"]
categories = ["cryptography::cryptocurrencies"]
readme = "Readme.md"
license-file = "../mit-license.md"

[features]
default = [ ]
bench = [ "criterion" ]

[[bench]]
name = "criterion"
harness = false
path = "criterion.rs"
required-features = [ "bench" ]

[dependencies]
criterion = { version = "0.4.0", optional = true } # Dev dep for bench
ark-bls12-381 = "0.3.0"
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.5.3"
ruint = { version = "1.3.0", features = ["ark-ff"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.34"
tracing = "0.1.36"
zeroize = "1.5.7"

[dev-dependencies]
proptest = "1.0.0"
ruint = { version = "1.3.0", features = ["proptest"] }
