[package]
version = "0.1.0"
name = "kzg-ceremony-crypto"
description = "Implementation of the ethereum kzg cermony spec cryptography"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
edition = "2021"
homepage = "https://github.com/ethereum/kzg-ceremony-sequencer"
repository = "https://github.com/ethereum/kzg-ceremony-sequencer"
keywords = ["cryptography"]
categories = ["cryptography::cryptocurrencies"]
readme = "Readme.md"
license-file = "../mit-license.md"

[features]
default = []
bench = ["criterion"]
arkworks = ["dep:ruint"]
blst = ["dep:blst"]

[[bench]]
name = "criterion"
harness = false
path = "criterion.rs"
required-features = ["bench"]

[dependencies]
ark-bls12-381 = "0.3.0"
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
blst = { version = "0.3.10", optional = true }
criterion = { version = "0.4.0", optional = true } # Dev dep for bench
digest = "0.10"
ethers-core = { version = "1.0.0", features = ["eip712"] }
hex = "0.4.3"
hex-literal = "0.3.4"
hkdf = "0.12.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"
ruint = { version = "1.5.0", features = ["ark-ff"], optional = true }
secrecy = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.87"
sha2 = "0.10"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.34"
tracing = "0.1.36"
zeroize = "1.5.7"

[dev-dependencies]
proptest = "1.0.0"
ruint = { version = "1.5.0", features = ["ark-ff", "proptest"] }
