[package]
version = "0.1.0"
name = "enum-variant-derive"
description = "Implementation of the ethereum kzg cermony spec cryptography"
authors = ["Grzegorz Swirski <grzegorz@swirski.name>"]
edition = "2021"
homepage = "https://github.com/ethereum/kzg-ceremony-sequencer"
repository = "https://github.com/ethereum/kzg-ceremony-sequencer"
keywords = ["cryptography"]
categories = ["cryptography::cryptocurrencies"]
readme = "Readme.md"
license-file = "../mit-license.md"

[lib]
proc_macro = true

[dependencies]
syn = "1.0.103"
quote = "1.0.21"
