[package]
version = "0.1.0"
name = "error-codes-derive"
description = "Derive error codes from error enums"
authors = ["Grzegorz Swirski <grzegorz@swirski.name>"]
edition = "2021"
homepage = "https://github.com/ethereum/kzg-ceremony-sequencer"
repository = "https://github.com/ethereum/kzg-ceremony-sequencer"
license-file = "../mit-license.md"

[lib]
proc_macro = true

[dependencies]
syn = "1.0.103"
quote = "1.0.21"
